# uvup

./: Makefile  README.md  prek.toml  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.cuda  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
src/starter/: __init__.py
src/uvup/: __init__.py  __main__.py  cli.py  deps.py
