[project]
name = "uvup"
version = "0.2.0"
description = "A CLI tool to update uv dependencies like pnpm update"
readme = "README.md"
authors = [{ name = "Kowyo", email = "kowyo@outlook.com" }]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "packaging>=26.0",
    "tomlkit>=0.14.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "prek>=0.3.8",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[project.scripts]
uvup = "uvup:main"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PTH"]
ignore = ["E501"]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
